if(BUILD_WASM)
    set(SQLITE3_SOURCES
        sqlite3-wasm.c
    )
else()
    set(SQLITE3_SOURCES
        sqlite3.c
    )
endif()

add_library(mojibake_sqlite STATIC ${SQLITE3_SOURCES})
target_compile_options(mojibake_sqlite
    PRIVATE
    # We usually don't use these. But by removing SQLite parts, we have multiple warnings.
    -Wno-unused-function
    -Wno-unused-variable
    -Wno-undefined-internal
    -Wno-unused-but-set-variable
    # Recommended
    -DSQLITE_DQS=0
    -DSQLITE_THREADSAFE=0
    -DSQLITE_DEFAULT_MEMSTATUS=0
    -DSQLITE_DEFAULT_WAL_SYNCHRONOUS=1
    -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
    -DSQLITE_MAX_EXPR_DEPTH=0
    -DSQLITE_USE_ALLOCA
    -DSQLITE_STRICT_SUBTYPE=1
    # See generate-sqlite.sh for more details
    -DSQLITE_OMIT_ALTERTABLE
    -DSQLITE_OMIT_ANALYZE
    -DSQLITE_OMIT_AUTHORIZATION
    -DSQLITE_OMIT_AUTOINCREMENT
    -DSQLITE_OMIT_AUTOINIT # Recommended
    -DSQLITE_OMIT_BLOB_LITERAL
    -DSQLITE_OMIT_CASE_SENSITIVE_LIKE_PRAGMA
    -DSQLITE_OMIT_CHECK
    -DSQLITE_OMIT_COMPILEOPTION_DIAGS
    -DSQLITE_OMIT_COMPLETE
    -DSQLITE_OMIT_COMPOUND_SELECT
    -DSQLITE_OMIT_DECLTYPE # Recommended
    -DSQLITE_OMIT_DEPRECATED # Recommended
    -DSQLITE_OMIT_DESERIALIZE
    -DSQLITE_OMIT_EXPLAIN
    -DSQLITE_OMIT_FLAG_PRAGMAS
    -DSQLITE_OMIT_FOREIGN_KEY
    -DSQLITE_OMIT_GENERATED_COLUMNS
    -DSQLITE_OMIT_GET_TABLE
    -DSQLITE_OMIT_INCRBLOB
    -DSQLITE_OMIT_INTEGRITY_CHECK
    -DSQLITE_OMIT_INTROSPECTION_PRAGMAS
    -DSQLITE_OMIT_JSON
    -DSQLITE_OMIT_LOAD_EXTENSION
    -DSQLITE_OMIT_LOCALTIME
    -DSQLITE_OMIT_MEMORYDB
    -DSQLITE_OMIT_PROGRESS_CALLBACK # Recommended
    -DSQLITE_OMIT_REINDEX
    -DSQLITE_OMIT_SCHEMA_PRAGMAS
    -DSQLITE_OMIT_SCHEMA_VERSION_PRAGMAS
    -DSQLITE_OMIT_SHARED_CACHE # Recommended
    -DSQLITE_OMIT_TCL_VARIABLE
    -DSQLITE_OMIT_TRACE
    -DSQLITE_OMIT_TRIGGER
    -DSQLITE_OMIT_UTF16
)

# WASM-specific configuration for SQLite
# Not needed?
#[[if(BUILD_WASM)
    target_compile_options(mojibake_sqlite PRIVATE
        -DSQLITE_OS_OTHER=1
        -DSQLITE_SYSTEM_MALLOC=1
    )
    target_compile_definitions(mojibake_sqlite PRIVATE
        SQLITE_OS_OTHER=1
        SQLITE_SYSTEM_MALLOC=1
    )
endif()]]
